--- a/css/basicstyle.css
+++ b/css/basicstyle.css
@@ -104,7 +104,7 @@ i{
   }
  
 
-  @media screen and (max-width:120vmin){
+  @media (max-width:120vmin){
     .navbar-nav li a{
       width:100%;
       display:block;
